--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <div class="logo">PRATIK NA.</div>
+            <div class="logo">PRATIK NANDA</div>
 
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
