--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     border-radius: 50%;
     overflow: hidden;
     margin: 0 auto 1.5rem;
-    border: 5px solid blue;
+    border: 5px solid rgb(13, 13, 24);
 }
 
 .profile-avatar img {
