--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
     overflow: hidden;
     margin: 0 auto 1.5rem;
     border: 5px solid rgb(101, 101, 121);
+    padding: 4px;
+    background: white;
 }
 
 .profile-avatar img {
