--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
         }
 
         .profile-card {
-            background: white;
+            background: #fdf8f887;
             padding: 2rem;
             border-radius: 30px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 20px 60px hsla(0, 0%, 0%, 0);
             text-align: center;
         }
 
@@ -209,10 +209,9 @@
     height: 200px;
     border-radius: 50%;
     overflow: hidden;
-    margin: 0 auto 1.5rem;
-    border: 5px solid rgb(101, 101, 121);
-    padding: 4px;
-    background: white;
+    margin: 0 auto 2rem;
+    border: 7px solid rgb(101, 101, 121);
+
 }
 
 .profile-avatar img {
@@ -228,7 +227,7 @@
         }
 
         .profile-info p {
-            color: #7f8c8d;
+            color: #3f4747;
             margin-bottom: 1rem;
         }
 
